tests/error/struct_errors/constructor_arg_mismatch.err
Error: Type mismatch (at $FILE:15:13)
   | 
13 | @guppy(module)
14 | def main() -> None:
15 |     MyStruct(0)
   |              ^ Expected argument of type `(int, int)`, got `int`

Guppy compilation failed due to 1 previous error
